# Starplex

./: Cargo.toml  README.md
.github/workflows/: note-book.yml
notes/: book.toml
notes/src/: SUMMARY.md  vello_notes.md
starplex_game/: Cargo.toml
starplex_game/src/: main.rs
starplex_lib/: Cargo.toml
starplex_lib/src/: canvas.rs  lib.rs  vello_plugin.rs
vevy_bello/: Cargo.toml
vevy_bello/src/: blit.rs  draw.rs  fragment.rs  lib.rs  node.rs  renderer.rs  scene.rs  target.rs
