[workspace]
resolver = "2"

members = [
    "starplex_game",
    "starplex_lib",
    "tools/ci",
    "vevy_bello",
]
default-members = ["starplex_game", "starplex_lib", "vevy_bello"]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
vello = { git = "https://github.com/linebender/vello" }
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [ "animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "png",
  "hdr",
  "ktx2",
  "zstd",
  "vorbis",
  "x11",
  "filesystem_watcher",
  "bevy_gizmos",
  "android_shared_stdcxx",
  "default_font",
  "webgl2",] }
