[package]
name = "starplex_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starplex_lib = { path = "../starplex_lib" }
vevy_bello = { path = "../vevy_bello" }
bevy = { workspace = true }
vello = { workspace = true }
